# geist

./: .env.example  .gitignore  DOCKER_RUNNER.md  Dockerfile  LICENSE  README.md  debate_nietzsche_ai.txt  deps.ts  docker_runner.py  geist.chatml  geist.ipynb  geist.py  geister.py  index.ts  lana.chatml  main.ts  nietzsche.chatml  pyproject.toml  requirements.txt  run_nietzsche_debate.sh  siddartha.chatml  siddhartha.chatml  sjobs.chatml  test_url_fetch.py
examples/: dogen.txt  nietzsche.txt  sjobs.txt  what-is-simplicity.html  what-is-truth.html
